# hyprtrace

./: .gitignore  2026华为开发者大赛训练营·大连理工大学站_史家辉+20242081630+ 姜国海.docx  Cargo.toml  README.md  hyprtrace-agent-prompts.md  hyprtrace-plan.md  作品信息.md
crates/hyprtrace-daemon/: Cargo.toml
crates/hyprtrace-daemon/src/: config.rs  db.rs  listener.rs  main.rs
crates/hyprtrace-server/: Cargo.toml
crates/hyprtrace-server/src/: config.rs  db.rs  main.rs  models.rs
crates/hyprtrace-server/src/ai/: mod.rs  ollama.rs  openai.rs
crates/hyprtrace-server/src/routes/: ai.rs  config.rs  data.rs  mod.rs
scripts/: hyprtrace-daemon.service  hyprtrace-server.service  install.sh  uninstall.sh
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AppRankingBar.tsx  AppTrendChart.tsx  AppUsagePie.tsx  ChatInput.tsx  ChatMessage.tsx  ErrorBoundary.tsx  HourlyHeatmap.tsx  Layout.tsx  StatCard.tsx  TimelineChart.tsx
web/src/lib/: api.ts  types.ts
web/src/pages/: AIChat.tsx  Apps.tsx  Dashboard.tsx  Sessions.tsx  Settings.tsx  Timeline.tsx
