[package]
name = "hyprtrace-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
hyprland = "0.4.0-beta.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
ctrlc = "3"