[package]
name = "hyprtrace-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"